@@ -1,3 +1,9 @@
+2005-09-23 20:21  hjanuschka
+
+	* ChangeLog, src/check.c, src/sched.c: if check times out
+	  curren_running gets in negative integer fixed default check
+	  timeout 15 seconds
+
 2005-09-22 04:55  hjanuschka
 
 	* ChangeLog, src/check.c, src/client/agent.c: agent: def timeout 15
